# claude-code-env-manager

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  README_zh.md  REVIEW.md  SUMMARY.md  THEME-REVIEW.md  THEME.md  model-prices.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.changeset/: afraid-toes-think.md  brave-node-runtimes.md  bright-buckets-talk.md  cold-doors-study.md  cold-start-splash-beta.md  config.json  desktop-github-updater.md  desktop-intel-runner.md  direct-updater-manifest.md  fair-cooks-happen.md  fifty-emus-knock.md  fix-native-claude-path.md  fresh-shrimps-applaud.md  green-hounds-draw.md  hip-moments-brush.md  interactive-prompt-reply-order.md  late-drinks-smoke.md  live-workspace-transcript.md  mean-bears-cheer.md  native-helper-production-path.md  native-runtime-jsonl-errors.md  native-runtime-user-path.md  neat-cobras-rest.md  odd-icons-juggle.md  pre.json  quiet-actions-ring.md  silver-llamas-wave.md  smooth-monkeys-count.md  swift-lions-guard.md  tasty-bulldogs-hope.md  terminal-blank-composer.md  tidy-tmux-orphans.md  workspace-chrome-polish.md  workspace-transcript-beta.md
.claude/: ralph-loop.local.md  settings.json
.claude/commands/: add-tauri-command.md  dev-desktop.md  health.md  verify.md
.claude/rules/: core-package.md  react-frontend.md  rust-backend.md
.codex/: hooks.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-cli.yml  release-desktop.yml  release.yml
apps/cli/: CHANGELOG.md  model-prices.json  package.json  tsup.config.ts  vitest.config.ts
apps/desktop/: CHANGELOG.md  index.html  package.json  poster-variants.html  tailwind.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.ci.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: trusted-app-commands.toml
apps/desktop/src-tauri/resources/: ccem-permission-mcp-server.mjs  native-runtime-helper.mjs
apps/desktop/src-tauri/src/: analytics.rs  app_updates.rs  bot_binding.rs  browser.rs  channel.rs  companion.rs  config.rs  cron.rs  crypto.rs  desktop_instance_lock.rs  diagnostic_log.rs  doctor.rs  event_bus.rs  event_dispatcher.rs  external_control.rs  history.rs  interactive_runtime.rs  ipc_isolation_tests.rs  jsonl_watcher.rs  main.rs  native_event_log.rs  native_event_log_todo_tests.rs  native_helper_resource.rs  native_runtime.rs  notifications.rs  opencode.rs  permission.rs  permission_preview.rs  pet_notifications.rs  pet_window.rs  prompt_image_store.rs  proxy_debug.rs  remote.rs  runtime.rs  session.rs  session_annotations.rs  session_provenance.rs  session_titles.rs  skills.rs  slash_commands.rs  (+10 more)
apps/desktop/src-tauri/src/bot_binding/: formatting.rs  storage.rs  tests.rs
apps/desktop/src-tauri/src/browser/: artifacts.rs  chromium_spike.rs  chromium_spike_tests.rs  logs.rs  policy.rs  registry.rs  runtime_readiness.rs  tools.rs  url.rs  webview.rs
apps/desktop/src-tauri/src/telegram/: channel.rs  mod.rs
apps/desktop/src-tauri/src/wecom/: channel.rs  media.rs  message.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/weixin/: channel.rs  mod.rs
coverage/: coverage-final.json  index.html  permissions.ts.html  presets.ts.html  remote.ts.html  setup.ts.html  skills.ts.html  types.ts.html  ui.ts.html  usage.ts.html  utils.ts.html
docs/: agent-memory-palace-presentation.html  file-size-exemptions.md  inspiration-from-claude-code-ecosystem.md
docs/architecture/: design-system.md  (+2 more)
scripts/: check-file-size.sh  check-i18n.js  sync-version.js
server/: .gitignore  auth.test.mjs  ecosystem.config.cjs  environments.example.json  environments.json  http-smoke.test.mjs  index.js  keys.example.json  keys.json  package-lock.json  package.json  validate-config.test.mjs
src/: index.ts  permissions.ts  presets.ts  remote.ts  setup.ts  skills.ts  types.ts  ui.ts  usage.ts  utils.ts
(+408 files in other folders)
