[package]
name = "ccem-desktop"
version = "1.8.0"
description = "CCEM Desktop Application"
authors = ["Genuifx"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
# 新增加密依赖
scrypt = "0.11"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
