[package]
name = "ccem-desktop"
version = "2.1.1"
description = "CCEM Desktop Application"
authors = ["Genuifx"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
toml = "0.9"
# 新增加密依赖
scrypt = "0.11"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"
quick-xml = "0.31"
tauri-plugin-mcp-bridge = "0.8"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-autostart = "2"
window-vibrancy = "0.7.1"
fs2 = "0.4"  # 文件锁支持
libc = "0.2"
tauri-plugin-updater = "2"
semver = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2", default-features = false }
objc2-foundation = { version = "0.2.2", default-features = false, features = ["NSArray", "NSData", "NSObject", "NSString"] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = ["NSImage", "NSPasteboard"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
